--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,8 +20,60 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="native-city.html">
-                                    Место рождения
+                                <a href="school.html">
+                                    Школа
+                                </a>
+                            </li>
+                            <li>
+                                <a href="high-education.html">
+                                    Университет
+                                </a>
+                            </li>
+                            <li>
+                                <a href="academic-performance.html">
+                                    Сведения об успеваемости
+                                </a>
+                            </li>
+                            <li>
+                                <a class="nav_already">
+                                    Контакты
+                                </a>
+                            </li>
+                            <li>
+                                <a href="other.html">
+                                    Разное
+                                </a>
+                            </li>
+                            <li>
+                                <a href="js-realization.html">
+                                    Реализация JavaScript
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </th>
+            </tr>
+
+            <tr class="table_body">
+                <td style="border:none" colspan=1>
+                    <div class="content_body">
+                        <div class="h1">
+                            <ul class="about">
+                                <li><span>Электронная почта: </span> <a href="mailto:medyankin03@mail.ru">medyankin03@mail.ru</a></li>
+                                <li><span>ВКонтакте: </span> <a href="https://vk.com/not_sdnss"> Медянкин Владислав</a></li>
+                                <li><span>Номер телефона: </span> 8 913 071-78-46</li>
+                            </ul>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <th colspan=1>
+                    <div class="content_footer">
+                        <ul class="header_menu">
+                            <li>
+                                <a href="../index.html">
+                                    Главная
                                 </a>
                             </li>
                             <li>
@@ -49,57 +101,9 @@
                                     Разное
                                 </a>
                             </li>
-                        </ul>
-                    </div>
-                </th>
-            </tr>
-
-            <tr class="table_body">
-                <td colspan=1>
-                    <div class="content_body">
-                        <div class="h1">
-                            <ul class="about">
-                                <li><span>Электронная почта: </span> <a href="mailto:medyankin03@mail.ru">medyankin03@mail.ru</a></li>
-                                <li><span>ВКонтакте: </span> <a href="https://vk.com/not_sdnss"> Медянкин Владислав</a></li>
-                                <li><span>Номер телефона: </span> 8 913 071-78-46</li>
-                            </ul>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-
-            <tr>
-                <th colspan=1>
-                    <div class="content_footer">
-                        <ul class="header_menu">
                             <li>
-                                <a href="../index.html">
-                                    Главная
-                                </a>
-                            </li>
-                            <li>
-                                <a href="native-city.html">
-                                    Место рождения
-                                </a>
-                            </li>
-                            <li>
-                                <a href="school.html">
-                                    Школа
-                                </a>
-                            </li>
-                            <li>
-                                <a href="high-education.html">
-                                    Университет
-                                </a>
-                            </li>
-                            <li>
-                                <a href="academic-performance.html">
-                                    Сведения об успеваемости
-                                </a>
-                            </li>
-                            <li>
-                                <a class="nav_already">
-                                    Контакты
+                                <a href="js-realization.html">
+                                    Реализация JavaScript
                                 </a>
                             </li>
                         </ul>
@@ -107,52 +111,12 @@
                 </th>
             </tr>
         </table>
-    </body>
-    <!-- <div class="content">
-        <div class="content_header">
-            <ul class="header_menu">
-                <li>
-                    <a href="../index.html">
-                        Главная
-                    </a>
-                </li>
-                <li>
-                    <a href="native-city.html">
-                        Место рождения
-                    </a>
-                </li>
-                <li>
-                    <a href="school.html">
-                        Школа
-                    </a>
-                </li>
-                <li>
-                    <a href="high-education.html">
-                        Университет
-                    </a>
-                </li>
-                <li>
-                    <a href="academic-performance.html">
-                        Сведения об успеваемости
-                    </a>
-                </li>
-                <li>
-                    <a class="nav_already">
-                        Контакты
-                    </a>
-                </li>
-            </ul>
+        <div class="date-clock">
+            <div id="clock"></div>
+            <div id="date"></div>
         </div>
-        <div class="content_body">
-            <div class="h1">
-                <ul class="about">
-                    <li><span>Электронная почта: </span> <a href="mailto:medyankin03@mail.ru"> medyankin03@mail.ru</a></li>
-                    <li><span>ВКонтакте: </span> <a href="https://vk.com/not_sdnss"> Медянкин Владислав</a></li>
-                    <li><span>Номер телефона: </span> 8 913 071-78-46</li>
-                </ul>
-            </div> 
-        </div>
-    </div> -->
+    </div>
+    <script src="../js/date-clock.js"></script>
 </body>
 
 </html>
