--- a/pages/other.html
+++ b/pages/other.html
@@ -2,7 +2,7 @@
 
 <head>
     <link href="../css/style.css" rel="stylesheet">
-    <title> Персональная Web-страница </title>
+    <title> Разное </title>
     <meta charset="utf-8">
 </head>
 
@@ -11,13 +11,8 @@
         <header class="content_header">
             <ul class="header_menu">
                 <li>
-                    <a target ="_blank" href="../index.html">
+                    <a target="_blank" href="../index.html">
                         Главная
-                    </a>
-                </li>
-                <li>
-                    <a href="native-city.html">
-                        Место рождения
                     </a>
                 </li>
                 <li>
@@ -45,6 +40,11 @@
                         Разное
                     </a>
                 </li>
+                <li>
+                    <a href="js-realization.html">
+                        Реализация JavaScript
+                    </a>
+                </li>
             </ul>
         </header>
         <div class="content_body">
@@ -68,81 +68,81 @@
                     <br>
                     ↑ Разрыв строки
                 </p>
-                <h2>Нумерованные списки</h2>
-                <ol class="other__center">
-                    <li>элемент 1</li>
-                    <li>элемент 2</li>
-                    <li>элемент 3</li>
+                <h3 style="margin: 5px">Нумерованные списки</h3>
+                <ol class="other_center">
+                    <li>Первый</li>
+                    <li>Второй</li>
+                    <li>Третий</li>
                 </ol>
-                <br>
-                <h2>Маркированные списки</h2>
-                <ul class="other__center">
-                    <li>элемент 1</li>
-                    <li>элемент 2</li>
-                    <li>элемент 3</li>
+                <h3 style="margin: 5px">Маркированные списки</h3>
+                <ul class="other_center">
+                    <li>Первый</li>
+                    <li>Второй</li>
+                    <li>Третий</li>
                 </ul>
-                <h2>Список определений</h2>
-                <dl class="other__center">
-                    <dt>Кофе</dt>
-                    <dd>Горячий темный напиток</dd>
-                    <dt>Молоко</dt>
-                    <dd>Белый охлажденный напиток</dd>
+                <h3 style="margin: 5px">Список определений</h3>
+                <dl class="other_center">
+                    <dt>Понедельник</dt>
+                    <dd>Первый день недели</dd>
+                    <dt>Вторник</dt>
+                    <dd>Второй день недели</dd>
                 </dl>
-                <h2>Вложенные списки</h2>
-                <ul class="other__center_list">
-                    <li> Понедельник
+                <h3 style="margin: 5px">Вложенные списки</h3>
+                <ul class="other_center_list">
+                    <li> Царство растений
                         <ol>
-                            <li>Отправить почту</li>
-                            <li>Визит к редактору
+                            <li>Подцарство Низшие</li>
+                            <li>Подцарство Высшие
                                 <ul>
-                                    <li>Выбор темы</li>
-                                    <li>Дкаративное оформление</li>
-                                    <li>Заключительный отчет</li>
+                                    <li>Мохообразные</li>
+                                    <li>Семенные</li>
+                                    <li>Папоротниковообразные</li>
                                 </ul>
                             </li>
                         </ol>
                     </li>
                 </ul>
             </div>
-            <div class="block-border-radius">
+            <div>
                 <div class="content-text">
-                    <div id="10" class="block-border-radius">
-                        <p><a href="../images/tusur_logo_main_color_rgb.eps">Сохранить логотип ТУСУР в формате eps</a></p>
-                    </div>
-                    <div id="13" class="block-border-radius"> 
+                    <div class="block-border-radius">
                         <div class="inline-box" style="overflow: hidden;">
-                            <img src="../images/tomsk.jpg" style="width: 500px; height: 400px;">
+                            <img src="../assets/nature.jpg" style="width: 500px; height: 400px;">
                             <p style="text-align:center;">Абсолютная величина</p>
                         </div>
                         <div class="inline-box" style="overflow: hidden;">
-                            <img src="../images/tomsk.jpg" style="width: 50%; height: 50%;">
+                            <img src="../assets/nature.jpg" style="width: 50%; height: 50%;">
                             <p style="text-align:center;">Относительная величина</p>
                         </div>
                     </div>
-                    <div id="14" class="block-border-radius"> 
-                        <img src="../images/tomsk.jpg" style="width: 500px; height: 400px;" align="left">
+                    <div class="alignment">
+                        <img src="../assets/nature.jpg" style="width: 500px; height: 400px;" align="left">
                         <p>Выравнивание</p>
-                        <img src="../images/tomsk.jpg" style="width: 500px; height: 400px;" align="bottom">
+                        <img src="../assets/nature.jpg" style="width: 500px; height: 400px;" align="bottom">
                     </div>
-                    <div id="16" class="block-border-radius">
+                    <div class="block-border-radius">
                         <p>Ссылка-картинка целиком</p>
-                        <a href="https://tomsk.gov.ru/" target="_blank">
-                            <img src="../images/tomsk.jpg" style="width: 500px; height: 400px;" vspace="10">
+                        <a target="_blank" href="https://tusur.ru">
+                            <img src="../assets/nature.jpg" style="width: 500px; height: 400px;" vspace="10">
                         </a>
                         <p>Карта изображения</p>
-                        <img src="../images/mapimage.png" vspace="10" usemap="#map">
+                        <img src="../assets/mapimage.png" vspace="10" usemap="#map">
                         <map name="map">
-                            <area shape="rect" coords="0,0, 200,200" alt="Первая ссылка" href="https://tusur.ru">
-                            <area shape="rect" coords="201,0, 400,200" alt="Вторая ссылка" href="https://school34-tomsk.ru/">
-                            <area shape="rect" coords="0,200, 200,400" alt="Третья ссылка" href="https://tomsk.gov.ru/">
-                            <area shape="rect" coords="201,201, 400,400" alt="Четвертая ссылка" href="https://vk.com/shipverty">
+                            <area shape="rect" coords="0,0, 200,200" alt="Первая ссылка" target="_blank"
+                                href="https://tusur.ru">
+                            <area shape="rect" coords="201,0, 400,200" alt="Вторая ссылка" target="_blank"
+                                href="https://vk.com/school_19_belovo">
+                            <area shape="rect" coords="0,200, 200,400" alt="Третья ссылка" target="_blank"
+                                href="https://ru.wikipedia.org/wiki/%D0%91%D0%B5%D0%BB%D0%BE%D0%B2%D0%BE">
+                            <area shape="rect" coords="201,201, 400,400" alt="Четвертая ссылка" target="_blank"
+                                href="https://vk.com/not_sdnss">
                         </map>
                     </div>
-                    <div id="17" class="block-border-radius">
+                    <div class="block-border-radius">
                         <table>
                             <tr>
                                 <td rowspan="3" colspan="2">
-                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                    <img src="../assets/nature.jpg" style="width: 200px; height: 100px;">
                                 </td>
                                 <td>text1</td>
                             </tr>
@@ -160,13 +160,13 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                    <img src="../assets/nature.jpg" style="width: 200px; height: 100px;">
                                 </td>
                                 <td>
-                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                    <img src="../assets/nature.jpg" style="width: 200px; height: 100px;">
                                 </td>
                                 <td>
-                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                    <img src="../assets/nature.jpg" style="width: 200px; height: 100px;">
                                 </td>
                             </tr>
                         </table>
@@ -177,10 +177,12 @@
                                     <table>
                                         <tr></tr>
                                         <tr>
-                                            <td>text</td><td>text</td>
+                                            <td>text</td>
+                                            <td>text</td>
                                         </tr>
                                         <tr>
-                                            <td>text</td><td>text</td>
+                                            <td>text</td>
+                                            <td>text</td>
                                         </tr>
                                     </table>
                                 </td>
@@ -197,13 +199,13 @@
                         <table>
                             <tr>
                                 <td>
-                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                    <img src="../assets/nature.jpg" style="width: 200px; height: 100px;">
                                 </td>
                                 <td>
-                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                    <img src="../assets/nature.jpg" style="width: 200px; height: 100px;">
                                 </td>
                                 <td>
-                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                    <img src="../assets/nature.jpg" style="width: 200px; height: 100px;">
                                 </td>
                             </tr>
                             <tr>
@@ -215,7 +217,7 @@
                             <tr>
                                 <td>text1</td>
                                 <td rowspan="3" colspan="2">
-                                    <img src="../images/tomsk.jpg" style="width: 200px; height: 100px;">
+                                    <img src="../assets/nature.jpg" style="width: 200px; height: 100px;">
                                 </td>
                             </tr>
                             <tr>
@@ -228,9 +230,14 @@
                     </div>
                 </div>
             </div>
-            </div>
         </div>
     </div>
+    <div class="date-clock">
+        <div id="clock"></div>
+        <div id="date"></div>
+    </div>
+    </div>
+    <script src="../js/date-clock.js"></script>
 </body>
 
 </html>
