--- a/pages/school.html
+++ b/pages/school.html
@@ -16,11 +16,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="native-city.html">
-                        Место рождения
-                    </a>
-                </li>
-                <li>
                     <a class="nav_already">
                         Школа
                     </a>
@@ -45,11 +40,23 @@
                         Разное
                     </a>
                 </li>
+                <li>
+                    <a href="js-realization.html">
+                        Реализация JavaScript
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="content_body">
-        
+                <img class="about_img" src="../assets/school2.jpg" style="border: 5px solid black; width: 60%;" vspace="10" alt="My school...">
+                <img class="about_img" src="../assets/school1.jpg" style="border: 5px solid black; width: 60%;" vspace="10" alt="My school...">
+        </div>
+        <div class="date-clock">
+            <div id="clock"></div>
+            <div id="date"></div>
         </div>
     </div>
+    <script src="../js/date-clock.js"></script>
 </body>
+
 </html>
