--- a/pages/high-education.html
+++ b/pages/high-education.html
@@ -16,11 +16,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="native-city.html">
-                        Место рождения
-                    </a>
-                </li>
-                <li>
                     <a href="school.html">
                         Школа
                     </a>
@@ -45,63 +40,66 @@
                         Разное
                     </a>
                 </li>
+                <li>
+                    <a href="js-realization.html">
+                        Реализация JavaScript
+                    </a>
+                </li>
             </ul>
         </div>
         <div class="content_body">
             <h3>Сведения о высшем образовании</h3>
-                    <br>
-                    <p style="text-indent: 22px;">
-                        На данный момент я обучаюсь в <a href="https://tusur.ru" target="_blank">Томском Государственном университете Систем управления и радиоэлектроники (ТУСУР)</a>.
-                    </p>
-                    <p style="text-indent: 22px;">
-                        Данные о получаемом образовании:
-
-                        <dl>
-                            <dt>
-                                <b>Вуз: </b>
-                            </dt>
-                            <dd>
-                                &nbsp;<a href="https://tusur.ru" target="_blank">ТУСУР (бывш. ТАСУР, ТИАСУР) '25</a>
-                            </dd>
-                            <dt>
-                                <b>Факультет: </b>
-                            </dt>
-                            <dd>
-                                &nbsp;Факультет вычислительных систем
-                            </dd>
-                            <dt>
-                                <b>Кафедра: </b>
-                            </dt>
-                            <dd>
-                                &nbsp;Кафедра компьютерных систем в управлении и проектировании (КСУП)
-                            </dd>
-                            <dt>
-                                <b>Специальность: </b>
-                            </dt>
-                            <dd>
-                                &nbsp; Информатика и вычислительная техника
-                            </dd>
-                            <dt>
-                                <b>Профиль: </b>
-                            </dt>
-                            <dd>
-                                &nbsp; Разработка программного обеспечения
-                            </dd>
-                            <dt>
-                                <b>Форма обучения: </b>
-                            </dt>
-                            <dd>
-                                &nbsp; Очное отделение
-                            </dd>
-                            <dt>
-                                <b>Статус: </b>
-                            </dt>
-                            <dd>
-                                &nbsp; Студент (бакалавр)
-                            </dd>
-                        </dl>
-                    </p>
+            <dl>
+                <dt>
+                    <b>Университет: </b>
+                </dt>
+                <dd>
+                    <a target="_blank" href="https://tusur.ru">ТУСУР (бывш. ТАСУР, ТИАСУР)</a>
+                </dd>
+                <dt>
+                    <b>Факультет: </b>
+                </dt>
+                <dd>
+                    Факультет вычислительных систем
+                </dd>
+                <dt>
+                    <b>Кафедра: </b>
+                </dt>
+                <dd>
+                    Кафедра компьютерных систем в управлении и проектировании (КСУП)
+                </dd>
+                <dt>
+                    <b>Специальность: </b>
+                </dt>
+                <dd>
+                    Информатика и вычислительная техника
+                </dd>
+                <dt>
+                    <b>Профиль: </b>
+                </dt>
+                <dd>
+                    Разработка программного обеспечения
+                </dd>
+                <dt>
+                    <b>Форма обучения: </b>
+                </dt>
+                <dd>
+                    Очное отделение
+                </dd>
+                <dt>
+                    <b>Статус: </b>
+                </dt>
+                <dd>
+                    Студент (бакалавр)
+                </dd>
+            </dl>
+        </div>
+        <div class="date-clock">
+            <div id="clock"></div>
+            <div id="date"></div>
         </div>
     </div>
+    <script src="../js/date-clock.js"></script>
 </body>
+
 </html>
