--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="css/style.css" rel="stylesheet">
     <title> Персональная Web-страница </title>
     <meta charset="utf-8">
-    <!-- <meta http-equiv="Refresh" content ="10; URL=file:///C:/Users/USer/Desktop/web/pages/contact.html"> -->
+    <meta http-equiv="Refresh" content ="10; URL=file:///C:/Users/USer/Desktop/web/pages/contact.html">
 </head>
 
 <body>
@@ -54,7 +54,7 @@
             </div>
             <div class="about_me">
                 <ul class="about">
-                    <li><span>Медянкин Владислав Константинович</span></li>
+                    <li><b>Медянкин Владислав Константинович</b></li>
                     <li>Родился 18 ноября 2003 года в городе <a target="blank" href="https://ru.wikipedia.org/wiki/%D0%91%D0%B5%D0%BB%D0%BE%D0%B2%D0%BE">Белово</a></li>
                     <li>В 2021 году закончил МБОУ СОШ №19 города Белово</li>
                     <li>В настоящий момент получаю образование в <a target="blank" href="https://tusur.ru/ru"> ТУСУРе</a></li>
