--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 
 <head>
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/style_hashtag.css" rel="stylesheet">
+    <link href="css/style_table.css" rel="stylesheet">
     <title> Персональная Web-страница </title>
     <meta charset="utf-8">
-    <meta http-equiv="Refresh" content ="10; URL=file:///C:/Users/USer/Desktop/web/pages/contact.html">
+    <!-- <meta http-equiv="Refresh" content ="10; URL=file:///C:/Users/USer/Desktop/web/pages/school.html"> -->
 </head>
 
 <body>
@@ -44,6 +46,11 @@
                 <li>
                     <a href="pages/js-realization.html">
                         Реализация JavaScript
+                    </a>
+                </li>
+                <li>
+                    <a target="_blank" href="C:\Users\USer\Desktop\web\Отчеты\Отчет_3.pdf" style="color: rgb(202, 12, 12);">
+                        Отчет 3
                     </a>
                 </li>
             </ul>
