--- a/pages/academic-performance.html
+++ b/pages/academic-performance.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <link href="../css/style.css" rel="stylesheet">
-    <title>Успеваемость</title>
+    <link href="../css/style_hashtag.css" rel="stylesheet">
+    <link href="../css/style_table.css" rel="stylesheet">
+    <title>Сведения об успеваемости</title>
     <script src="../js/main.js"></script>
 </head>
 <body>
