--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,13 +3,15 @@
 
 <head>
     <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/style_hashtag.css" rel="stylesheet">
+    <link href="../css/style_table.css" rel="stylesheet">
     <title>Контакты</title>
 </head>
 
 <body>
 
     <body>
-        <table cellpadding="0" cellspacing="0" width="100%">
+        <table cellpadding="0" cellspacing="0" width="1910px">
             <tr>
                 <th colspan=1>
                     <div class="content_header">
@@ -111,7 +113,7 @@
                 </th>
             </tr>
         </table>
-        <div class="date-clock">
+        <div class="date-clock" style="width: 1910px">
             <div id="clock"></div>
             <div id="date"></div>
         </div>
