--- a/pages/other.html
+++ b/pages/other.html
@@ -2,6 +2,8 @@
 
 <head>
     <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/style_hashtag.css" rel="stylesheet">
+    <link href="../css/style_table.css" rel="stylesheet">
     <title> Разное </title>
     <meta charset="utf-8">
 </head>
