--- a/pages/high-education.html
+++ b/pages/high-education.html
@@ -3,6 +3,8 @@
 
 <head>
     <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/style_hashtag.css" rel="stylesheet">
+    <link href="../css/style_table.css" rel="stylesheet">
     <title>Университет</title>
 </head>
 
