Сделал 4 лабу, перенес файлы в отдельные папки

--- a/pages/academic-performance.html
+++ b/pages/academic-performance.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="content">
-        <div class="content_header">
+        <header class="content_header">
             <ul class="header_menu">
                 <li>
                     <a href="../index.html">
@@ -47,7 +47,7 @@
                     </a>
                 </li>
             </ul>
-        </div>
+        </header>
         <div class="content_body">
             <h3>Успеваемость</h3>
             <div class="evaluations">
@@ -219,6 +219,6 @@
             <div id="date"></div>
         </div>
     </div>
-    <script src="../js/date-clock.js"></script>
+    <script src="../js/lab3_js/date-clock.js"></script>
 </body>
 </html>
