--- a/pages/js-realization.html
+++ b/pages/js-realization.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="content">
-        <div class="content_header">
+        <header class="content_header">
             <ul class="header_menu">
                 <li>
                     <a href="../index.html">
@@ -48,7 +48,7 @@
                     </a>
                 </li>
             </ul>
-        </div>
+        </header>
         <div class="wrapper">
             <div class="menu_body">
                 <ul class="menu">
@@ -111,11 +111,11 @@
             <div id="date"></div>
         </div>
     </div>
-    <script src="../js/date-clock.js"></script>
-    <script src="../js/task1.js"></script>
-    <script src="../js/task2.js"></script>
-    <script src="../js/task3.js"></script>
-    <script src="../js/task4.js"></script>
+    <script src="../js/lab3_js/date-clock.js"></script>
+    <script src="../js/lab3_js/task1.js"></script>
+    <script src="../js/lab3_js/task2.js"></script>
+    <script src="../js/lab3_js/task3.js"></script>
+    <script src="../js/lab3_js/task4.js"></script>
 </body>
 
 </html>
