--- a/pages/other.html
+++ b/pages/other.html
@@ -239,7 +239,7 @@
         <div id="date"></div>
     </div>
     </div>
-    <script src="../js/date-clock.js"></script>
+    <script src="../js/lab3_js/date-clock.js"></script>
 </body>
 
 </html>
