--- a/pages/school.html
+++ b/pages/school.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="content">
-        <div class="content_header">
+        <header class="content_header">
             <ul class="header_menu">
                 <li>
                     <a href="../index.html">
@@ -48,7 +48,7 @@
                     </a>
                 </li>
             </ul>
-        </div>
+        </header>
         <div class="content_body">
                 <img class="about_img" src="../assets/school2.jpg" style="border: 5px solid black; width: 60%;" vspace="10" alt="My school...">
                 <img class="about_img" src="../assets/school1.jpg" style="border: 5px solid black; width: 60%;" vspace="10" alt="My school...">
@@ -58,7 +58,7 @@
             <div id="date"></div>
         </div>
     </div>
-    <script src="../js/date-clock.js"></script>
+    <script src="../js/lab3_js/date-clock.js"></script>
 </body>
 
 </html>
