--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="C:\Users\USer\Desktop\web\Отчеты\Отчет_3.pdf" style="color: rgb(202, 12, 12);">
-                        Отчет 3
+                    <a href="pages/lab4/menu.html" style="color: rgb(202, 12, 12);">
+                        Лаба №4
                     </a>
                 </li>
             </ul>
@@ -76,8 +76,8 @@
             <div id="date"></div>
         </div>
     </div>
-    <script src="js/timer.js"></script>
-    <script src="js/date-clock.js"></script>
+    <script src="js/lab3_js/timer.js"></script>
+    <script src="js/lab3_js/date-clock.js"></script>
 </body>
 
 </html>
