--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,7 +14,7 @@
         <table cellpadding="0" cellspacing="0" width="1910px">
             <tr>
                 <th colspan=1>
-                    <div class="content_header">
+                    <header class="content_header">
                         <ul class="header_menu">
                             <li>
                                 <a href="../index.html">
@@ -52,7 +52,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </div>
+                    </header>
                 </th>
             </tr>
 
@@ -71,7 +71,7 @@
             </tr>
             <tr>
                 <th colspan=1>
-                    <div class="content_footer">
+                    <footer class="content_footer">
                         <ul class="header_menu">
                             <li>
                                 <a href="../index.html">
@@ -109,7 +109,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </div>
+                    </footer>
                 </th>
             </tr>
         </table>
@@ -118,7 +118,7 @@
             <div id="date"></div>
         </div>
     </div>
-    <script src="../js/date-clock.js"></script>
+    <script src="../js/lab3_js/date-clock.js"></script>
 </body>
 
 </html>
