--- a/pages/high-education.html
+++ b/pages/high-education.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="content">
-        <div class="content_header">
+        <header class="content_header">
             <ul class="header_menu">
                 <li>
                     <a href="../index.html">
@@ -48,7 +48,7 @@
                     </a>
                 </li>
             </ul>
-        </div>
+        </header>
         <div class="content_body">
             <h3>Сведения о высшем образовании</h3>
             <dl>
@@ -101,7 +101,7 @@
             <div id="date"></div>
         </div>
     </div>
-    <script src="../js/date-clock.js"></script>
+    <script src="../js/lab3_js/date-clock.js"></script>
 </body>
 
 </html>
